--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -2,6 +2,7 @@
 @color-dark-blue: #0455a8;
 @color-white: #fff;
 @color-grey: #4a4a4a;
+@color-medium-grey: #bbbbbb;
 @color-light-grey: #f0f0f0;
 @color-light-grey-2: #fbfbfb;
 @color-green: #52ab15;
