--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
 ﻿@using System.Reflection
-@using System.Text.RegularExpressions
 @using Cloudents.Web.Extensions
 @using Cloudents.Web.Views
 @using Microsoft.AspNetCore.Hosting
@@ -8,8 +7,8 @@
 @inject WebPackChunkName Provider
 @{
     const string themeColor = "#4190b";
-    ViewBag.title = ViewBag.title ?? "Spitball";
-    ViewBag.metaDescription = ViewBag.metaDescription ?? "Join the social studying revolution at Spitball";
+    ViewBag.title = ViewBag.title ?? "Simplify school | Spitball";
+    ViewBag.metaDescription = ViewBag.metaDescription ?? " Spitball - Curating all of the resources you need. For Free.";
     ViewBag.fbImage = ViewBag.fbImage ?? "/images/3rdParty/fbShare.png";
     ViewBag.imageSrc = ViewBag.imageSrc ?? "/images/3rdParty/fbShare.png";
     var version = Assembly.GetEntryAssembly().GetName().Version.ToString(4);
@@ -60,7 +59,7 @@
     <meta property="og:image" name="og:image" content="@ViewBag.fbImage" />
     <meta property="og:description" name="og:description" content="@ViewBag.metaDescription" />
     <meta property="og:title" name="og:title" content="@ViewBag.title" />
-    <meta property="og:url" content="https://www.spitball.co@Context.Request.Path" />
+    <meta property="og:url" content="https://www.spitball.co@(Context.Request.Path)" />
     <meta property="og:type" content="website" />
     <link href="https://plus.google.com/116999550356569810034" rel="publisher" />
 
