--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 @using Cloudents.Web.Extensions
 @using Cloudents.Web.Views
 @using Microsoft.AspNetCore.Hosting
+@using Microsoft.AspNetCore.Http.Extensions
 @inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 @inject IHostingEnvironment Environment
 @inject WebPackChunkName Provider
@@ -56,10 +57,10 @@
 
     <meta property="fb:app_id" content="450314258355338" />
     <meta property="og:site_name" content="Spitball" />
-    <meta property="og:image" name="og:image" content="@ViewBag.fbImage" />
+    <meta property="og:image" name="og:image" content="@("https://" +Context.Request.Host + ViewBag.fbImage)" />
     <meta property="og:description" name="og:description" content="@ViewBag.metaDescription" />
     <meta property="og:title" name="og:title" content="@ViewBag.title" />
-    <meta property="og:url" content="https://www.spitball.co@(Context.Request.Path)" />
+    <meta property="og:url" content="@Context.Request.GetEncodedUrl()" />
     <meta property="og:type" content="website" />
     <link href="https://plus.google.com/116999550356569810034" rel="publisher" />
 
