Small fixes in f.c.

--- a/Cloudents.Web/ClientApp/components/preview/flashcard.less
+++ b/Cloudents.Web/ClientApp/components/preview/flashcard.less
@@ -437,7 +437,7 @@
 
         .shuffle {
             .inTheMiddle;
-            color: @color-grey; // TODO: Irena - fix to actual color
+            color: #5d5d5d;
             @media(min-width: (@screen-xs + 1)) {
                 margin-top: 20px;
             }
@@ -449,7 +449,7 @@
             svg {
                 width: 22px;
                 height: 20px;
-                fill: @color-grey;
+                fill: #5d5d5d;
                 margin-right: 8px;
                 transform: rotateY(0deg) /*rtl:rotateY(180deg)*/;
             }
@@ -473,7 +473,7 @@
                 font-weight: bold;
                 text-transform: capitalize;
                 margin: 10px;
-                border-radius: 10px;
+                border-radius: 4px;
                 text-align: center;
                 min-width: 92px;
                 min-height: 26px;
@@ -507,7 +507,7 @@
                 }
             }
         }
-
+        /*
         .like-wrapper {
             position: absolute;
             bottom: 10px;
@@ -524,7 +524,7 @@
             span {
                 font-weight: bold;
             }
-            /*md-icon {// TODO: Irena - fix
+            md-icon {// TODO: Irena - fix
                 width: 20px;
                 height: 21px;
                 fill: @textColorGrey;
@@ -545,7 +545,7 @@
                 md-icon {
                     fill: @textColorWhite;
                 }
-            }*/
+            }
             button {
                 //border: 1px solid @textColorGrey; // TODO: Irena - fix
                 border-radius: 5px;
@@ -566,6 +566,8 @@
         .like-wrapper, .like-wrapper button > div {
             .inTheMiddle;
         }
+        */
+
         /*.share-btn { // TODO: Irena - fix
             position: absolute;
             top: 0;
@@ -745,6 +747,7 @@
                 height: inherit;
 
                 .side {
+                    color: #5d5d5d;
                     width: 100%;
                     flex-grow: 1;
                     display: flex;
@@ -842,7 +845,7 @@
                 position: absolute;
                 top: 5px;
                 right: 5px;
-                z-index: 1;
+                z-index: 0;
                 outline: none;
                 width: 36px;
                 height: 36px;
