--- a/Cloudents.Web/ClientApp/components/app/app.less
+++ b/Cloudents.Web/ClientApp/components/app/app.less
@@ -6,7 +6,12 @@
     height: 100vh;
     position:fixed;
     background-color:rgba(255, 255, 255,.8);
-    z-index:1;
+    z-index:3;
+}
+.loading{
+    main.content{
+        padding-top: 0!important;
+    }
 }
 .flex-fix {
     min-width: 0;
