--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -203,6 +203,8 @@
 
 // Size constants
 @navBarHeightMdAndUp: 120px;
+@mainNavHeightXsOnly: 120px;//TODO: fix to actual size (seperated from the verticals bar)
+@mainNavHeightSmAndUp: 60px;
 //@navBarHeightMobile: 96px;
 @resultsFilterWidth: 222px;
 //@resultsTabsHeight: 52px;
