Documents page - continued...

--- a/Cloudents.Web/ClientApp/components/preview/flashcardHeader.less
+++ b/Cloudents.Web/ClientApp/components/preview/flashcardHeader.less
@@ -1,7 +1,7 @@
 ﻿@import "../../mixin.less";
 
 @flashcardHeaderHeight: 142px;
-@heightOfSiteHeader: 60px;
+@heightOfSiteHeader: 115px;
 
 .card-style() {
     background-color: @color-white;
@@ -23,7 +23,7 @@
         padding-bottom: 0;
         padding-top: 0;
         position: fixed;
-        top: @heightOfSiteHeader; // TODO: Irena -fix
+        top: @heightOfSiteHeader;
         left: 0;
         right: 0;
         z-index: 1;
