--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -200,6 +200,12 @@
     }
 }
 
+.item-page-width() {
+    max-width: 756px;
+    width: 100%;
+    padding: 0 8px;
+    margin: 0 auto !important;
+}
 
 // Size constants
 @navBarHeightMdAndUp: 120px;
