fix ui on loading

--- a/Cloudents.Web/ClientApp/components/app/app.less
+++ b/Cloudents.Web/ClientApp/components/app/app.less
@@ -12,6 +12,9 @@
     main.content{
         padding-top: 0!important;
     }
+    .p-result{
+        opacity: 0;
+    }
 }
 .flex-fix {
     min-width: 0;
