small fixes in documents preview

--- a/Cloudents.Web/ClientApp/components/preview/headerDocument.less
+++ b/Cloudents.Web/ClientApp/components/preview/headerDocument.less
@@ -13,7 +13,7 @@
             .item-page-width();
 
             .item-name {
-                .responsive-property(font-size, 24px, null, 18);
+                .responsive-property(font-size, 24px, null, 18px);
                 font-weight: 600;
                 line-height: 1.21;
                 letter-spacing: -0.5px;
@@ -37,13 +37,13 @@
 
             .item-meta {
                 .author {
-                    .responsive-property(font-size, 16px, null, 12);
+                    .responsive-property(font-size, 16px, null, 12px);
                     letter-spacing: -0.4px;
                     color: @color-dark-blue;
                 }
 
                 .date {
-                    .responsive-property(font-size, 16px, null, 12);
+                    .responsive-property(font-size, 16px, null, 12px);
                     letter-spacing: -0.4px;
                     color: #5d5d5d;
                 }
@@ -63,4 +63,5 @@
 
 .tooltip__content {
     width: 60%;
+    max-width: 400px;
 }
