--- a/Cloudents.Web/ClientApp/components/preview/item.less
+++ b/Cloudents.Web/ClientApp/components/preview/item.less
@@ -14,12 +14,8 @@
 .html-content {
     border: 0;
     height: ~"calc(100vh - 175px)";
-    width: ~"calc(100% - 40px)";
     max-width: 760px;
-
-    @media (max-width: 600px) {
-        width: ~ "calc(100% - 20px)";
-    }
+    width: 100%;
 }
 
 .item {
